plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.0.115'
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories{
    mavenLocal()

    maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
    }

    //jei
    maven {
        url = "https://dvs1.progwml6.com/files/maven/"
    }

    //jei
    maven {
        url = "https://modmaven.dev"
    }

    //favouriteless
    maven {
        url = "https://maven.favouriteless.net/releases"
    }

    //curios
    maven {
        name = "Illusive Soulworks maven"
        url = "https://maven.theillusivec4.top/"
    }

    //modrinth
    maven {
        url = "https://api.modrinth.com/maven"
    }

    //tyson the ember
    repositories {
        maven { url = 'https://maven.tysontheember.dev' }
    }

    repositories {
        exclusiveContent {
            forRepository {
                maven {
                    url "https://cursemaven.com"
                }
            }
            filter {
                includeGroup "curse.maven"
            }
        }
    }

}

dependencies {

    //tiny multiblock lib
    jarJar(modImplementation("maven.modrinth:tiny-multiblock-lib:forge-1.20.1-${tiny_multiblock_lib_version}"))

    //NeoBackports
    jarJar(modImplementation("net.nikdo53.neobackports:NeoBackports:${neobackports_version}"))
    interfaceInjectionData("net.nikdo53.neobackports:NeoBackports:${neobackports_version}")

    modImplementation("com.wdiscute:Selling-Bin:1.4.1-FORGE-1.20.1")

    //EMI
    modCompileOnly("dev.emi:emi-forge:${emi_version}:api")
    modRuntimeOnly("dev.emi:emi-forge:${emi_version}")

    //JEI
    modCompileOnly "mezz.jei:jei-${mc_version}-forge:${jei_version}"

    //Serene Seasons
    modCompileOnly("maven.modrinth:serene-seasons:9.1.0.2")
    modCompileOnly("maven.modrinth:glitchcore:0.0.1.1")

    //mixin
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    implementation("io.github.llamalad7:mixinextras-forge:[0.5.0,)")
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.0"))


    //runtimeOnly "maven.modrinth:serene-seasons:9.1.0.2"
    //runtimeOnly "maven.modrinth:glitchcore:0.0.1.1"

    //modImplementation("maven.modrinth:serene-seasons:9.1.0.2")
    //modImplementation("maven.modrinth:glitchcore:0.0.1.1")

    modCompileOnly ("curse.maven:terrafirmacraft-302973:6990923")

    jarJar(implementation("maven.modrinth:tiny-multiblock-lib:forge-1.20.1-${tiny_multiblock_lib_version}"))

    //Ecliptic Seasons
    modCompileOnly("curse.maven:ecliptic-seasons-1118306:7304569")

    modCompileOnly("curse.maven:ftb-teams-forge-404468:6130786")


    modCompileOnly("maven.modrinth:quality-food:2.3.0-1.20.1")
    modCompileOnly("maven.modrinth:relics-mod:0.8.0.13")
    modCompileOnly( "top.theillusivec4.curios:curios-forge:${curios_version}:api")

    modCompileOnly("curse.maven:oculus-581495:6020952")
}



base {
    archivesName = mod_id
}

// Mojang ships Java 17 to end users in 1.20.1, so mods should target Java 17.
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

legacyForge {
    // Specify the version of MinecraftForge to use.
    version = project.minecraft_version + '-' + project.forge_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    // interfaceInjectionData.from "src/main/resources/starcatcher.interfaces.json"

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id


        }
        server {
            server()
            programArgument '--nogui'
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

// Sets up a dependency configuration called 'localRuntime' and a deobfuscating one called 'modLocalRuntime'
// These configurations should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}
obfuscation {
    createRemappingConfiguration(configurations.localRuntime)
}

// Uncomment the lines below if you wish to configure mixin. The mixin file should be named modid.mixins.json.
mixin {
    add sourceSets.main, "${mod_id}.mixins.refmap.json"
    config "${mod_id}.mixins.json"
}


// This block of code expands all declared replace properties
// in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version          : forge_version,
            forge_version_range    : forge_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            MixinConfigs           : "${mod_id}.mixins.json",
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
legacyForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}